fix seal alignment

--- a/lgu2/static/secondary.css
+++ b/lgu2/static/secondary.css
@@ -715,6 +715,11 @@ blockquote > .para2 {
   text-align: right;
 }
 
+.signatureBlock > .content > div.seal {
+  margin-top: 0.5em;
+  text-align: left;
+}
+
 .signatureBlock > .content > .signature {
   font-style: italic;
 }
